--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -38,7 +38,7 @@
 
   <p>
 
-    <%= form.input :course_id, collection: @courses, label_method: :course_name, value_method: :id, prompt: 'Selecione um curso' %>
+    <%= form.input :course_id, collection: @courses, label_method: :course_name, value_method: :id, prompt: 'Choose of Course' %>
   </p>
 
   <p>
