--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -1,12 +1,20 @@
 <div id="<%= dom_id course %>">
-  <p>
-    <strong>Course name:</strong>
-    <%= course.course_name %>
-  </p>
+  <tr>
+    <td> <%= course.course_name %> </td>
+    
+    <td> <%= course.course_code %> </td>
 
-  <p>
-    <strong>Course code:</strong>
-    <%= course.course_code %>
-  </p>
 
+    <td> 
+      <%= link_to course_path(course) do %>
+        <i class="fas fa-eye"></i>
+      <%end%>
+    </td>
+
+    <td> 
+    <%= link_to edit_course_path(course) do %>
+      <i class="fas fa-edit"></i>
+    <%end%>
+    </td>
+  </tr>
 </div>
