--- a/app/views/layouts/menus/_menu_navbar.html.erb
+++ b/app/views/layouts/menus/_menu_navbar.html.erb
@@ -1,10 +1,10 @@
 <!-- Inicio do Menu -->
 
 <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
-    <div class="sidebar-brand-icon rotate-n-15">
-        <i class="fas fa-laugh-wink"></i>
+    <div class="sidebar-brand-icon">
+    <%= image_tag 'acflor.png' , width: 60, height: 60 %>
     </div>
-    <div class="sidebar-brand-text mx-3">Welcome to ACFLOR <sup>2</sup></div>
+    <div class="sidebar-brand-text mx-3" >ACFLOR</div>
 </a>
 
 <!-- Divider -->
@@ -13,7 +13,7 @@
 <!-- Nav Item - Dashboard -->
 <li class="nav-item">
     <%= link_to root_path, class:"nav-link" do %>
-    <i class="fas fa-fw fa-tachometer-alt"></i>
+    <i class="fas fa-home"></i>
     <span>Home Page</span>
     <%end%>
 </li>
@@ -31,13 +31,13 @@
 <li class="nav-item">
     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
         aria-expanded="true" aria-controls="collapseTwo">
-        <i class="fas fa-fw fa-cog"></i>
+        <i class="fas fa-user-graduate"></i>
         <span>Students</span>
     </a>
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-        <div class="bg-white py-2 collapse-inner rounded">
-            <%= link_to 'Students List', students_path, class:"collapse-item" %>
-            <%= link_to 'New Stundent', new_student_path, class:"collapse-item" %> 
+        <div class="bg-orange py-2 collapse-inner rounded">
+            <%= link_to 'Students List', students_path, class:"collapse-item", style: "color: white;" %>
+            <%= link_to 'New Stundent', new_student_path, class:"collapse-item" , style: "color: white;" %> 
         </div>
     </div>
 </li>
@@ -47,14 +47,14 @@
 <li class="nav-item">
     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
         aria-expanded="true" aria-controls="collapseUtilities">
-        <i class="fas fa-fw fa-wrench"></i>
+        <i class="fas fa-book-open"></i>
         <span>Courses</span>
     </a>
     <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
         data-parent="#accordionSidebar">
-        <div class="bg-white py-2 collapse-inner rounded">
-            <%= link_to 'Courses List', courses_path, class:"collapse-item" %>
-            <%= link_to 'New Course', new_course_path, class:"collapse-item" %> 
+        <div class="bg-orange py-2 collapse-inner rounded">
+            <%= link_to 'Courses List', courses_path, class:"collapse-item", style: "color: white;" %>
+            <%= link_to 'New Course', new_course_path, class:"collapse-item", style: "color: white;" %> 
         </div>
     </div>
 </li>
@@ -64,14 +64,14 @@
 <li class="nav-item">
     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseThree"
         aria-expanded="true" aria-controls="collapseThree">
-        <i class="fas fa-fw fa-wrench"></i>
+        <i class="fas fa-building"></i>
         <span>Entites</span>
     </a>
     <div id="collapseThree" class="collapse" aria-labelledby="headingUtilities"
         data-parent="#accordionSidebar">
-        <div class="bg-white py-2 collapse-inner rounded">
-            <%= link_to 'Entities List', entities_path, class:"collapse-item" %>
-            <%= link_to 'New Entities', new_entity_path, class:"collapse-item" %> 
+        <div class="bg-orange py-2 collapse-inner rounded">
+            <%= link_to 'Entities List', entities_path, class:"collapse-item", style: "color: white;" %>
+            <%= link_to 'New Entities', new_entity_path, class:"collapse-item", style: "color: white;" %> 
         </div>
     </div>
 </li>
@@ -81,14 +81,14 @@
 <li class="nav-item">
     <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseFor"
         aria-expanded="true" aria-controls="collapseFor">
-        <i class="fas fa-fw fa-wrench"></i>
+        <i class="fas fa-sticky-note"></i>
         <span>Attendances</span>
     </a>
     <div id="collapseFor" class="collapse" aria-labelledby="headingUtilities"
         data-parent="#accordionSidebar">
-        <div class="bg-white py-2 collapse-inner rounded">
-            <%= link_to 'Attendances List', attendances_path, class:"collapse-item" %>
-            <%= link_to 'New Attendances', new_attendance_path, class:"collapse-item" %> 
+        <div class="bg-orange py-2 collapse-inner rounded">
+            <%= link_to 'Attendances List', attendances_path, class:"collapse-item", style: "color: white;" %>
+            <%= link_to 'New Attendances', new_attendance_path, class:"collapse-item", style: "color: white;" %> 
         </div>
     </div>
 </li>
