--- a/app/views/attendances/index.html.erb
+++ b/app/views/attendances/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Attendances</h1>
 
-<div id="attendances box-shadow">
+<div id="attendances">
   <% @attendances.each do |attendance| %>
     <%= render attendance %>
     <p>
