--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -1,9 +1,7 @@
 <div id="<%= dom_id course %>">
   <tr>
     <td> <%= course.course_name %> </td>
-    
-    <td> <%= course.course_code %> </td>
-
+    <td> <%= course.entity.name %> </td>
 
     <td> 
       <%= link_to course_path(course) do %>
