--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -9,7 +9,7 @@
   <thead>
     <tr>      
       <th><strong>Course Name</strong></th>
-      <th><strong>Course Code</strong></th>
+      <th><strong>Entity</strong></th>
       <th colspan="3" ><strong>Actions</strong></th>
     </tr>
   </thead>
@@ -24,6 +24,3 @@
 <div class="pagination-container">
   <%= paginate @courses %>
 </div>
-
-
-
