--- a/app/views/entities/show.html.erb
+++ b/app/views/entities/show.html.erb
@@ -14,17 +14,42 @@
           <th>Email</th>
         </tr>
       </thead>
+
       <tbody>
         <tr>
-           <td><%= @entity.name%></td>
-           <td><%= @entity.responsible%></td>
-           <td><%= @entity.address%></td>
-           <td><%= @entity.phone%></td>
-           <td><%= @entity.email%></td>
+          <td><%= @entity.name%></td>
+          <td><%= @entity.responsible%></td>
+          <td><%= @entity.address%></td>
+          <td><%= @entity.phone%></td>
+          <td><%= @entity.email%></td>
         </tr>
       </tbody>
     </table>
   </div>
+
+  <div class="card card-default">
+    <div class="card-header">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Todos os Cursos</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr>
+            <td>
+              <% @courses.each do |course| %>
+                <%= link_to course.course_name, course_path(course) %> | 
+              <% end %>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+
   <div class="card-footer">
       <%= link_to 'Back', entities_path, class: 'btn btn-primary' %>
       <%= link_to 'Edit', edit_entity_path(@entity), class: 'btn btn-success' %>
