Ajustes nas views index, show de students

--- a/app/views/students/_student.html.erb
+++ b/app/views/students/_student.html.erb
@@ -6,6 +6,7 @@
     <td> <%= student.email%> </td>
     <td> <%= student.course.course_name%> </td>
     <td> <%= student.date_of_birth %> </td>
+    <td> <%= student.entity.name%> </td>
 
     <td> 
       <%= link_to student_path(student) do %>
