--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -14,6 +14,7 @@
       <th><strong>Email</strong></th>
       <th><strong>Course</strong></th>
       <th><strong>Date of Birth</strong></th>
+      <th><strong>Entity</strong></th>
       <th colspan="3" ><strong>Actions</strong></th>
     </tr>
   </thead>
